--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "twitter-homepage-2",
-  "version": "0.1.0",
+  "name": "twitter-homepage",
+  "version": "0.2.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "classnames": "^2.2.6",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "is-url": "^1.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-jss": "^8.6.1",
+    "react-scripts": "3.0.1",
+    "react-transition-group": "^4.0.1",
+    "reset-css": "^4.0.1",
+    "socket.io": "^2.2.0",
+    "twit": "^2.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "node server.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run-script build"
   },
   "eslintConfig": {
     "extends": "react-app"
